<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Add_New_Todo">Add New Todo</string>
    <string name="title_activity_all_todo">AllTodoActivity</string>
    <string name="title_activity_new_todo">NewTodoActivity</string>
    <string name="due_Time">Due Time</string>
    <string name="due_Date">Due Date</string>
    <string name="Todo_Name">Todo Name</string>
    <string name="Location">Due Time</string>
    <string name="Create_Todo">Create Todo</string>


</resources>
